--- a/README
+++ b/README
@@ -81,12 +81,14 @@ SYNOPSIS
       }
 
 DESCRIPTION
+    Consuming this role gives your class a POE::Session capable of
+    processing events via loaded plugins and/or emitting them to registered
+    "listener" sessions.
+
     This is a Moo::Role for a POE Observer Pattern implementation; it is
     derived from POE::Component::Syndicator by BINGOS, HINRIK, APOCAL et al,
-    but with more cows ;-) and a few extra features.
-
-    Consuming this role gives your class a POE::Session capable of emitting
-    events to loaded plugins and registered "listener" sessions.
+    but with more cows ;-) and a few extra features, as well as the faster
+    plugin dispatch system that comes with MooX::Role::Pluggable.
 
     The Emitter role consumes MooX::Role::Pluggable, making your emitter
     pluggable (see the MooX::Role::Pluggable documentation for
