--- a/Changes
+++ b/Changes
@@ -17,7 +17,7 @@
  * 0.08  30 Oct 2012
  
    Previous release left '_pluggable_event' broken when using Moose.
-   Fix and add tests for same.
+   Fix and add xt/ tests for same.
 
  * 0.07  27 Oct 2012
 
